      which prevents adding the remote instance's table to the SQL, 
      thereby making more complex conditions possible [ticket:554]
    - added generative versions of aggregates, i.e. sum(), avg(), etc.
      to query. used via query.apply_max(), apply_sum(), etc. 
      #552
    - fix to using distinct() or distinct=True in combination with 
      join() and similar
    - corresponding to label/bindparam name generataion, eager loaders 
      generate deterministic names for the aliases they create using 
      md5 hashes.
    - improved/fixed custom collection classes when giving it "set"/
      "sets.Set" classes or subclasses (was still looking for append()
      methods on them during lazy loads)
    - fix to many-to-many relationships targeting polymorphic mappers
      [ticket:533]
    - making progress with session.merge() as well as combining its
      usage with entity_name [ticket:543]
    - the usual adjustments to relationships between inheriting mappers,
      in this case establishing relation()s to subclass mappers where
      the join conditions come from the superclass' table
- informix:
    - informix support added !  courtesy James Zhang, who put a ton
      of effort in.
- sqlite:
    - removed silly behavior where sqlite would reflect UNIQUE indexes
      as part of the primary key (?!)
- oracle:
    - small fix to allow successive compiles of the same SELECT object
      which features LIMIT/OFFSET.  oracle dialect needs to modify
      the object to have ROW_NUMBER OVER and wasn't performing 
      the full series of steps on successive compiles.
- mysql
    - support for SSL arguments given as inline within URL query string,
      prefixed with "ssl_", courtesy terjeros@gmail.com.
    - mysql uses "DESCRIBE [<schemaname>].<tablename>", catching exceptions
      if table doesnt exist, in order to determine if a table exists.
      this supports unicode table names as well as schema names. tested